--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
   "name": "webchat",
-  "version": "1.2.3",
+  "version": "1.1.1",
   "description": "",
   "main": "lib/index.js",
   "scripts": {
-    "clean:lib": "rm -rf lib",
-    "clean:dist": "rm -rf dist",
-    "build": "npm run clean:dist && NODE_ENV=production npm run build:webpack",
+    "build": "NODE_ENV=production npm run build:webpack",
     "build:webpack": "node bin/build.js",
     "build:js": "babel src -d lib",
-    "start": "npm run clean:dist && node bin/build-dev",
-    "lib": "npm run clean:lib && node bin/build-lib",
+    "start": "node bin/build-dev",
+    "lib": "node bin/build-lib",
     "prettier": "prettier --write \"src/**/*.?(js|?(s)css|json)\" && eslint --fix src",
     "lint": "eslint src",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -24,6 +22,7 @@
     "classnames": "^2.2.5",
     "cookies-js": "^1.2.3",
     "extract-text-webpack-plugin": "^3.0.2",
+    "lib-jitsi-meet": "^1.0.6",
     "lodash": "^4.17.4",
     "progress-bar-webpack-plugin": "^1.10.0",
     "prop-types": "^15.6.0",
@@ -32,13 +31,12 @@
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-redux": "^5.0.6",
-    "react-render": "^1.2.1",
+    "react-render": "^3.0.0",
     "react-slick": "^0.18.1",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
     "redux-thunk": "^2.2.0",
-    "sanitize-html-react": "^1.13.0",
-    "valid-url": "^1.0.9"
+    "sanitize-html-react": "^1.13.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.6",
@@ -67,6 +65,6 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4"
+    "webpack-dev-server": "^3.1.10"
   }
 }
