--- a/package.json
+++ b/package.json
@@ -17,12 +17,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@braintree/sanitize-url": "^2.1.0",
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "classnames": "^2.2.5",
     "cookies-js": "^1.2.3",
     "extract-text-webpack-plugin": "^3.0.2",
-    "lib-jitsi-meet": "^1.0.6",
     "lodash": "^4.17.4",
     "progress-bar-webpack-plugin": "^1.10.0",
     "prop-types": "^15.6.0",
@@ -31,8 +29,9 @@
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-redux": "^5.0.6",
-    "react-render": "^3.0.0",
+    "react-render": "^1.2.1",
     "react-slick": "^0.18.1",
+    "react-speech-recognition": "^2.0.1",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
     "redux-thunk": "^2.2.0",
@@ -65,6 +64,6 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "webpack": "^3.8.1",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-server": "^2.9.4"
   }
 }
